--- a/public/layouts/semi-dark-menu/css/dark/structure.css
+++ b/public/layouts/semi-dark-menu/css/dark/structure.css
@@ -831,8 +831,8 @@ body.dark .sidebar-closed > .sidebar-wrapper:hover #sidebar .theme-brand li.them
   display: block;
 }
 body.dark #sidebar .theme-brand div.theme-text a {
-  font-size: 25px !important;
-  color: #e0e6ed !important;
+  font-size: 30px !important;
+  color: #c8c91e !important;
   line-height: 2.75rem;
   padding: 0.39rem 0.8rem;
   text-transform: initial;
@@ -891,9 +891,9 @@ body.dark .sidebar-closed .sidebar-wrapper:hover ul.menu-categories li.menu.menu
 }
 body.dark .sidebar-wrapper ul.menu-categories li.menu.menu-heading > .heading {
   cursor: pointer;
-  font-size: 13px;
+  font-size: 15px;
   font-weight: 600;
-  color: #506690;
+  color: #c8c91e;
   padding: 32px 0 10px 36px;
   letter-spacing: 1px;
 }
@@ -930,7 +930,7 @@ body.dark #sidebar ul.menu-categories li.menu > .dropdown-toggle {
   display: flex;
   justify-content: space-between;
   cursor: pointer;
-  font-size: 15px;
+  font-size: 16px;
   color: #bfc9d4;
   padding: 10.2px 16px;
   font-weight: 400;
