--- a/public/layouts/semi-dark-menu/css/light/structure.css
+++ b/public/layouts/semi-dark-menu/css/light/structure.css
@@ -891,8 +891,8 @@ body .navbar .dark-mode, body:not(.dark) .navbar .dark-mode {
 }
 
 #sidebar .theme-brand div.theme-text a {
-  font-size: 25px !important;
-  color: #e0e6ed !important;
+  font-size: 30px !important;
+  color: #c8c91e !important;
   line-height: 2.75rem;
   padding: 0.39rem 0.8rem;
   text-transform: initial;
@@ -954,9 +954,9 @@ body .navbar .dark-mode, body:not(.dark) .navbar .dark-mode {
 
 .sidebar-wrapper ul.menu-categories li.menu.menu-heading > .heading {
   cursor: pointer;
-  font-size: 13px;
+  font-size: 15px;
   font-weight: 600;
-  color: #506690;
+  color: #c8c91e;
   padding: 32px 0 10px 36px;
   letter-spacing: 1px;
 }
@@ -995,7 +995,7 @@ body .navbar .dark-mode, body:not(.dark) .navbar .dark-mode {
   display: flex;
   justify-content: space-between;
   cursor: pointer;
-  font-size: 15px;
+  font-size: 16px;
   color: #bfc9d4;
   padding: 10.2px 16px;
   font-weight: 400;
